INCLUDES = $(all_includes) -I$(top_srcdir) -I$(R_LIB) -I$(GALILEI_LIB) -I$(QTDIR)/include
lib_LTLIBRARIES =  ../liben.la ../liben_dlg.la
___liben_la_LDFLAGS = -module -avoid-version
___liben_la_SOURCES = glangen.cpp
___liben_la_LIBADD=$(GALILEI_LIB)/langs/libgalilei_langs.la
___liben_dlg_la_LDFLAGS = -module -avoid-version
___liben_dlg_la_SOURCES = glangen_kde.cpp
___liben_dlg_la_LIBADD=$(GALILEI_LIB)/langs/libgalilei_langs.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =

