INCLUDES = $(all_includes) -I$(top_srcdir) -I$(R_LIB) -I$(GALILEI_LIB) -I$(QTDIR)/include
lib_LTLIBRARIES =  ../libfr.la ../libfr_dlg.la
___libfr_la_LDFLAGS = -module -avoid-version
___libfr_la_SOURCES = glangfr.cpp
___libfr_la_LIBADD=$(GALILEI_LIB)/langs/libgalilei_langs.la
___libfr_dlg_la_LDFLAGS = -module -avoid-version
___libfr_dlg_la_SOURCES = glangfr_kde.cpp
___libfr_dlg_la_LIBADD=$(GALILEI_LIB)/langs/libgalilei_langs.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =

