INCLUDES = $(all_includes) -I$(top_srcdir) -I$(R_LIB) -I$(GALILEI_LIB) -I$(QTDIR)/include
lib_LTLIBRARIES =  ../libnl.la ../libnl_dlg.la
___libnl_la_LDFLAGS = -module -avoid-version
___libnl_la_SOURCES = glangnl.cpp
___libnl_la_LIBADD=$(GALILEI_LIB)/infos/libgalilei_infos.la
___libnl_dlg_la_LDFLAGS = -module -avoid-version
___libnl_dlg_la_SOURCES = glangnl_kde.cpp
___libnl_dlg_la_LIBADD=$(GALILEI_LIB)/infos/libgalilei_infos.la
AM_CFLAGS =
AM_CXXFLAGS =
AM_FFLAGS =
SUBDIRS =

